--- a/test/.env
+++ b/test/.env
@@ -1,1 +1,2 @@
 VITE_API_BASE_URL="http://localhost/wdpf-batch-66_class/react/reactProject/admin/api"
+VITE_IMG_URL="http://localhost/wdpf-batch-66_class/react/reactProject/admin/img"
